--- a/example.html
+++ b/example.html
@@ -22,7 +22,7 @@
 // on load
 $(function() {
     var desc = 'So Fresh and <em>so</em> Clean. Mmmm... yeah.';
-    $('#wrap').append(fullMonty({'a':['X','x.mp4'], 'b':['Y','y.mp4'], 'c':['Z','z.mp4']}, desc));
+    $('#wrap').append(fullMonty({'a':['X','y.webm'], 'b':['Y','x.webm'], 'c':['Z','z.webm']}, desc));
 });
 </script>
 </body>
