A bit more infrastructure.
Given all dependencies a simple 'make' in the root should yield demo
videos.

--- a/example.html
+++ b/example.html
@@ -3,6 +3,7 @@
 <head>
     <title>Da Brain</title>
     <meta charset="UTF-8">
+    <link href="membrane.css" rel="stylesheet" type="text/css">
     <style>
         #wrap {
             width: 960px;
@@ -21,8 +22,8 @@
 <script>
 // on load
 $(function() {
-    var desc = 'So Fresh and <em>so</em> Clean. Mmmm... yeah.';
-    $('#wrap').append(fullMonty({'a':['X','y.webm'], 'b':['Y','x.webm'], 'c':['Z','z.webm']}, desc));
+    var desc = 'And here it is... the brain!.';
+    $('#wrap').append(fullMonty({'a':['Coronal','demo/0.webm'], 'b':['Sagittal','demo/1.webm'], 'c':['Axial','demo/2.webm']}, desc));
 });
 </script>
 </body>
